api con event_category y event_player
