# backend/sportsbet_server/controllers/event_category_controller.py
@@ -1,0 +1,14 @@
+import connexion
+import six
+
+from sportsbet_server.models import EventCategory  # noqa: E501
+from sportsbet_server import util
+
+def add_event_category():
+    return {}
+def get_event_category_by_id(Id):
+    return {}
+def delete_event_category(Id):
+    return {}
+def update_event_category(Id, name):
+    return ()
