# backend/sportsbet_server/controllers/event_player_controller.py
@@ -1,0 +1,14 @@
+import connexion
+import six
+
+from sportsbet_server import util, config
+from sportsbet_server.models import (Event)
+
+def add_event_player():
+    return {}
+def get_event_player_by_id(Id):
+    return {}
+def delete_event_player(Id):
+    return {}
+def update_event_player(Id, name):
+    return ()
