# backend/sportsbet_server/openapi/sportsbet_server.yaml
@@ -148,6 +148,276 @@ paths:
         "400":
           description: Invalid bet value
       x-openapi-router-controller: sportsbet_server.controllers.bet_controller
+  /event_player:
+    post:
+      tags:
+      - event_player
+      summary: Add a new event player
+      description: Add a new event player
+      operationId: add_event_player
+      parameters:
+      - name: api_key
+        in: header
+        description: ""
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: name
+        in: query
+        description: the name of the event player
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventPlayer'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/EventPlayer'
+        "405":
+          description: Invalid input
+      x-openapi-router-controller: sportsbet_server.controllers.event_player_controller
+  /event_player/{Id}:
+    get:
+      tags:
+      - event_player
+      summary: Find event_player by ID
+      description: Returns a single event_player
+      operationId: get_event_player_by_id
+      parameters:
+      - name: api_key
+        in: header
+        description: ""
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Id
+        in: path
+        description: ID of event_player to return
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventPlayer'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/EventPlayer'
+        "400":
+          description: Invalid ID supplied
+        "404":
+          description: EventPlayer not found
+      x-openapi-router-controller: sportsbet_server.controllers.event_player_controller
+    delete:
+      tags:
+      - event_player
+      summary: Deletes a event_player
+      description: delete a event_player
+      operationId: delete_event_player
+      parameters:
+      - name: api_key
+        in: header
+        description: ""
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Id
+        in: path
+        description: EventPlayer id to delete
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "400":
+          description: Invalid event_player value
+      x-openapi-router-controller: sportsbet_server.controllers.event_player_controller
+    put:
+      tags:
+      - event_player
+      summary: Update event_player
+      description: This can only be done by the logged in event_player.
+      operationId: update_event_player
+      parameters:
+      - name: id
+        in: path
+        description: id of the event_player that need to be updated
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        description: Update an existent event_player in the event
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EventPlayer'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/EventPlayer'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/EventPlayer'
+      responses:
+        default:
+          description: successful operation
+      x-openapi-router-controller: sportsbet_server.controllers.event_player_controller
+  /event_category:
+    post:
+      tags:
+      - event_category
+      summary: Add a new event player
+      description: Add a new event player
+      operationId: add_event_category
+      parameters:
+      - name: api_key
+        in: header
+        description: ""
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: name
+        in: query
+        description: the name of the event player
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventCategory'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/EventCategory'
+        "405":
+          description: Invalid input
+      x-openapi-router-controller: sportsbet_server.controllers.event_category_controller
+  /event_category/{Id}:
+    get:
+      tags:
+      - event_category
+      summary: Find event_category by ID
+      description: Returns a single event_category
+      operationId: get_event_category_by_id
+      parameters:
+      - name: api_key
+        in: header
+        description: ""
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Id
+        in: path
+        description: ID of event_category to return
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EventCategory'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/EventCategory'
+        "400":
+          description: Invalid ID supplied
+        "404":
+          description: EventCategory not found
+      x-openapi-router-controller: sportsbet_server.controllers.event_category_controller
+    delete:
+      tags:
+      - event_category
+      summary: Deletes a event_category
+      description: delete a event_category
+      operationId: delete_event_category
+      parameters:
+      - name: api_key
+        in: header
+        description: ""
+        required: false
+        style: simple
+        explode: false
+        schema:
+          type: string
+      - name: Id
+        in: path
+        description: EventCategory id to delete
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "400":
+          description: Invalid event_category value
+      x-openapi-router-controller: sportsbet_server.controllers.event_category_controller
+    put:
+      tags:
+      - event_category
+      summary: Update event_category
+      description: This can only be done by the logged in event_category.
+      operationId: update_event_category
+      parameters:
+      - name: id
+        in: path
+        description: id of the event_category that need to be updated
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      requestBody:
+        description: Update an existent event_category in the event
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EventCategory'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/EventCategory'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/EventCategory'
+      responses:
+        default:
+          description: successful operation
+      x-openapi-router-controller: sportsbet_server.controllers.event_category_controller
   /event:
     get:
       tags:
@@ -170,6 +440,26 @@ paths:
 #      - api_key: []
       x-openapi-router-controller: sportsbet_server.controllers.event_controller
   /user:
+    get:
+      tags:
+      - event
+      summary: Returns all users
+      description: list of users
+      operationId: get_users
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: integer
+                  format: int32
+                x-content-type: application/json
+#      security:
+#      - api_key: []
+      x-openapi-router-controller: sportsbet_server.controllers.user_controller
     post:
       tags:
       - user
@@ -376,6 +666,24 @@ paths:
       x-openapi-router-controller: sportsbet_server.controllers.user_controller
 components:
   schemas:
+    EventPlayer:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 07cb3c2c-b40c-472f-b05c-7168ac4327e0
+        name:
+          type: string
+          example: U. de Chile
+    EventCategory:
+      type: object
+      properties:
+        id:
+          type: string
+          example: 07cb3c2c-b40c-472f-b05c-7168ac4327e0
+        name:
+          type: string
+          example: Primera Division
     Event:
       type: object
       properties:
